# fdk-aac

./: .clang-format.settings  .gitignore  Android.mk  Application.mk  CMakeLists.txt  Makefile.am  aac-dec.c  build.bat  build_ndk.bat  build_ninja.bat  m4a-dec.c  m4a-enc.c  test-encode-decode.c
android/liblog/inlcude/log/: log.h  log_safetynet.h
ffmpeg/: CMakeLists.txt  ffmpeg_stubs.c
ffmpeg/autogen/: config.h
ffmpeg/autogen/libavcodec/: parser_list.c
ffmpeg/autogen/libavformat/: demuxer_list.c  muxer_list.c
libAACenc/src/: aacenc.h  aacenc_lib.cpp  intensity.cpp  metadata_main.cpp
libFDK/include/: FDK_archdef.h
libFDK/include/mips/: cplx_mul_mips.h
libFDK/include/ppc/: clz_ppc.h  fixmul_ppc.h
libSBRdec/src/: psdec.cpp
libSBRenc/src/: env_est.cpp
libSYS/src/: syslib_channelMapDescr.cpp
